# flake-templates

./: LICENSE  README.md  flake.nix
haskell-library/: .gitignore  flake.nix  fourmolu.yaml  haskell-library.cabal
haskell-library/nix/: shell.nix
haskell-library/nix/overlays/: haskell.nix
haskell-library/src/: CustomPrelude.hs  MyLib.hs
