cabal-version: 2.4
name:          haskell-library
version:       0.1.0.0
author:        gareth
maintainer:    gareth.stokes@paidright.io

library
  exposed-modules:
    CustomPrelude
    MyLib

  build-depends:
    , base                 ^>=4.16.1.0
    , bytestring
    , lens
    , mtl
    , text
    , transformers-either

  hs-source-dirs:   src
  default-language: Haskell2010
